# llmailbot

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.all  MANIFEST.in  Makefile  README.md  config.example.yaml  docker_entrypoint.sh  example_download_mail.py  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
docker-compose/: config.yaml  docker-compose.yaml  requirements.txt
examples/docker-compose/: docker-compose.yaml
examples/docker-swarm/: config.yaml  docker-stack.redis.yaml  docker-stack.simple.yaml  docker-stack.yaml  email_imap.json  email_smtp.json  receive_queue.json  redis.conf  requirements.txt  send_queue.json
jbmailbot/: __main__.py  config.py  logging.py  mailbot.py  mailfetch.py  mailqueue.py  mailsend.py  queue.py  runtask.py
jbmailbot/email/: fetch.py  model.py  send.py
llmailbot/: __main__.py  config.py  core.py  dkim.py  enums.py  mailbot.py  queue.py  ratelimit.py  security.py  taskrun.py
llmailbot/email/: fetch.py  model.py  send.py
tests/: test_config.py  test_hello.py  test_taskrun.py
