[tool.poetry]
name = "llmailbot"
version = "0.2.0"
description = "A server app that enables chatting with LLMs via email."
authors = ["Jerome Boisvert-Chouinard <github@jbchouinard.net>"]
readme = "README.md"
packages = [{include = "llmailbot"}]

[tool.poetry.scripts]
llmailbot = "llmailbot.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"
aiorun = "^2025.1.1"
click = "^8.1.8"
config-path = "^1.0.5"
email-validator = "^2.2.0"
imap-tools = "^1.10.0"
langchain = "^0.3.20"
langchain-anthropic = {version="^0.3.10", optional=true}
langchain-openai = {version="^0.3.8", optional=true}
loguru = "^0.7.3"
pydantic = "^2.10.6"
pydantic-settings = "^2.8.1"

[tool.poetry.extras]
openai = ["langchain-openai"]
anthropic = ["langchain-anthropic"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.11.0"
pudb = "^2024.1.3"
pytest-asyncio = "^0.25.3"

[tool.ruff]
target-version = "py312"
line-length = 100
# Enable auto-fixing
fix = true
# Enable automatic sorting of imports
unsafe-fixes = false

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "W"]
ignore = []
exclude = [
    ".git",
    ".ruff_cache",
    "__pycache__",
    "dist",
]

[tool.ruff.lint.isort]
known-first-party = ["llmailbot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.basedpyright]
include = ["llmailbot"]
typeCheckingMode = "basic"
reportPrivateUsage = false
reportIgnoreCommentWithoutRule = false
reportExplicitAny = false
reportRedeclaration = false
reportAny = false
