[tool.poetry]
name = "llmailbot"
version = "0.2.0"
description = "A server app that enables chatting with LLMs via email."
authors = ["Jerome Boisvert-Chouinard <github@jbchouinard.net>"]
readme = "README.md"
packages = [{include = "llmailbot"}]

[tool.poetry.scripts]
llmailbot = "llmailbot.__main__:cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", "cython"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"
aiorun = "^2025.1.1"
click = "^8.1.8"
config-path = "^1.0.5"
email-validator = "^2.2.0"
imap-tools = "^1.10.0"
langchain = "^0.3.20"
loguru = "^0.7.3"
pydantic = "^2.10.6"
pydantic-settings = "^2.8.1"
# Optional dependencies
dkimpy = {version="^1.1.8", extras=["ed25519"], optional=true}
py3dns = {version="^4.0.2", optional=true}
redis = {extras = ["hiredis"], version = "^5.2.1", optional=true}

[tool.poetry.extras]
dkim = ["dkimpy", "py3dns"]
redis = ["redis"]

[tool.poetry.group.langchain.dependencies]
langchain-anthropic = "^0.3.10"
langchain-openai = "^0.3.9"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.0"
pytest = "^8.3.5"
pytest-asyncio = "^0.25.3"
pudb = "^2024.1.3"

[tool.ruff]
target-version = "py312"
line-length = 100
# Enable auto-fixing
fix = true
# Enable automatic sorting of imports
unsafe-fixes = false

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "W"]
ignore = []
exclude = [
    ".git",
    ".ruff_cache",
    "__pycache__",
    "dist",
]

[tool.ruff.lint.isort]
known-first-party = ["llmailbot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.basedpyright]
include = ["llmailbot", "tests"]
typeCheckingMode = "basic"
reportPrivateUsage = false
reportIgnoreCommentWithoutRule = false
reportExplicitAny = false
reportRedeclaration = false
reportAny = false
